<resources>
    <string name="app_name">ONGAndroid</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Inicio</string>
    <string name="about_us_title">Nosotros</string>
    <string name="activities_title">Actividades</string>
    <string name="news_title">Novedades</string>
    <string name="reviews_title">Testimonios</string>
    <string name="contact_title">Contacto</string>
    <string name="donate_title">Contribuye</string>
    <string name="somos_mas_logo_description">Somos Mas Logo</string>
    <string name="testimonials_tittle">TESTIMONIOS</string>
    <string name="welcome_txt">Bienvenidos a SOMOS MAS ONG</string>
    <string name="textLoading">Loading...</string>
    <string name="testimoniales_tittle">Testimonios</string>
    <string name="error_textview_message">Ha ocurrido un error obteniendo la información</string>
    <string name="lastest_news">ULTIMAS NOVEDADES</string>
    <string name="error_bt_retry">Reintentar</string>
    <string name="contrasenia">Contraseña</string>
    <string name="email">Email</string>
    <string name="registro">Registro</string>
    <string name="iniciar">Iniciar</string>
    <string name="api_error">Api error</string>
    <string name="error">Error</string>
    <string name="sign_up_error">Error al registrarse</string>
    <string name="ok">OK</string>
    <string name="bad_request">Bad request</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="incorrect_user_or_password">Incorrect user or password</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="title_sign_up">Registrar Usuario</string>
    <string name="text_button_save">Guardar</string>
    <string name="text_button_cancel">Cancelar</string>
    <string name="error_passwords_matches">Passwords are not the same</string>
    <string name="user_success_sign_up">User was successfully register</string>
    <string name="error_textview_contact">Ha ocurrido un error. Intente nuevamente mas tarde</string>


    <string name="error_login">Ha ocurrido un error. Verifica tu email y tu contraseña</string>


    <!-- FragmentContactUs -->
    <string name="string_firstname_textfield_fragment_contactus">Nombre</string>
    <string name="string_title_text_view_fragment_contactus">Contactate con nosotros</string>
    <string name="string_phone_textfield_fragment_contactus">Telefono</string>
    <string name="string_email_textfield_fragment_contactus">Email</string>
    <string name="string_button_fragment_contactus">Enviar</string>
    <string name="string_question_textfield_fragment_contactus">Escribe tu consulta</string>
    <string name="invalid_email_text">El Formato de email no es valido.</string>
    <string name="contact_send">Consulta enviada</string>
    <string name="contact_send_description">Su consulta fue enviada con exito</string>
    <string name="ok_button">Aceptar</string>

    <!---UserRegisterView-->
    <string name="string_first_name_user_register_view">Usuario</string>
    <string name="string_last_name_user_register_view">Apellido</string>
    <string name="string_email_user_register_view">Email</string>
    <string name="string_password_user_register_view">Contraseña</string>
    <string name="string_confirm_password_user_register_view">Repita Contraseña</string>
    <string name="string_button_register_user_register_view">Registrarse</string>
    <string name="string_error_password_not_equals_user_register_view">Passwords are not the same</string>
    <string name="cd_image_logo_user_register_view">logo</string>
    <string name="more_news_button">VER MAS</string>

    <!--- FragmentAboutUs -->
    <string name="string_header_about_us">Sobre Nosotros </string>
    <string name="string_about_us_members">Miembros</string>

    <!--Facebook-->

    <string name="facebook_app_id">701313221060896</string>
    <string name="fb_login_protocol_scheme">fb701313221060896</string>
    <string name="facebook_client_token">f1b26e91beb504b4e2d0597d892e258d</string>


    <!---MemberDetailFragment-->
    <string name="string_title_member_detail_fragment">Detalle</string>
    <string name="string_textview_member_name_fragment_member_detail">Nombre Miembro</string>
    <string name="string_textview_member_description_fragment_member_detail">Descripcion</string>
    <string name="string_textview_facebook_url_fragment_member_detail">facebookurl</string>
    <string name="string_textview_linkedin_url_fragment_member_detail">linkedinurl</string>


</resources>