<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.signup_user.SignUpUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_blue_600"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/cd_image_logo_user_register_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <RelativeLayout
        android:id="@+id/relative_layout_container_fields_user_register_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintWidth_percent=".92">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_username_register_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_username_register_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_first_name_user_register_view"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_email_user_register_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_layout_username_register_view"
                    android:padding="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_email_user_register_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_email_user_register_view"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_password_user_register_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_layout_email_user_register_view"
                    android:padding="1dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_password_user_register_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_password_user_register_view"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_confirm_password_user_register_view"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_layout_password_user_register_view"
                    android:padding="1dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_confirm_password_user_register_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_confirm_password_user_register_view"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_msg_error_password_user_register_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_input_layout_confirm_password_user_register_view"
                    android:textStyle="italic"></TextView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register_user_register_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_msg_error_password_user_register_view"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:backgroundTint="@color/light_blue_600"
                    android:text="@string/string_button_register_user_register_view"
                    android:textAllCaps="false"></com.google.android.material.button.MaterialButton>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>