<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.memberdetails.MemberDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_parent_fragment_member_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_fragment_member_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_fragment_member_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95">
    </androidx.constraintlayout.widget.Guideline>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_top_fragment_member_detail"
        android:background="@color/blue">
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_member_fragment_member_detail"
        android:layout_width="@dimen/layout_width_height_image_member_fragment_member_detail"
        android:layout_height="@dimen/layout_width_height_image_member_fragment_member_detail"
        android:src="@drawable/user"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_parent_fragment_member_detail">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/text_view_name_member_fragment_member_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/string_textview_member_name_fragment_member_detail"
        android:textColor="@color/black"
        android:textSize="@dimen/size_textview_member_name_fragment_member_detail"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/image_member_fragment_member_detail"></TextView>

    <TextView
        android:id="@+id/text_view_description_member_fragment_member_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/string_textview_member_description_fragment_member_detail"
        android:textColor="@color/black"
        android:textSize="@dimen/size_textview_member_name_fragment_member_detail"
        app:layout_constraintTop_toBottomOf="@id/text_view_name_member_fragment_member_detail"></TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_description_member_fragment_member_detail">

        <LinearLayout
            android:id="@+id/linear_layout_contain_link_facebook_fragment_member_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/app_name"
                android:padding="1dp"
                android:src="@drawable/facebook_logo"></ImageView>

            <TextView
                android:id="@+id/text_view_link_facebook_url_fragment_member_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/string_textview_facebook_url_fragment_member_detail"
                android:textColor="@color/blue"
                android:textSize="@dimen/size_textview_member_link_fragment_member_detail"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_contain_link_linkedin_fragment_member_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_contain_link_facebook_fragment_member_detail">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/app_name"
                android:padding="1dp"
                android:src="@drawable/linkedin_logo"></ImageView>

            <TextView
                android:id="@+id/text_view_link_linkedin_url_fragment_member_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/string_textview_linkedin_url_fragment_member_detail"
                android:textColor="@color/blue"
                android:textSize="@dimen/size_textview_member_link_fragment_member_detail"></TextView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_border_fragment_member_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom_fragment_member_detail">
    </LinearLayout>
    <ImageView
        android:id="@+id/image_view_logo_fragment_member_detail"
        android:layout_width="@dimen/layout_width_logo_fragment_member_detail"
        android:layout_height="@dimen/layout_height_logo_fragment_member_detail"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_fragment_member_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"></ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>